--- a/DoctoLib/src/main/resources/application.properties
+++ b/DoctoLib/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/doctolib
 
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=Login123!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #hibernate
