--- a/DoctoLib/src/main/resources/application.properties
+++ b/DoctoLib/src/main/resources/application.properties
@@ -3,10 +3,10 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/doctolib
 
 spring.datasource.username=root
-spring.datasource.password=Login123!
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #hibernate
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
