--- a/DoctoLib/src/main/resources/application.properties
+++ b/DoctoLib/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 ## Mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/doctolib
+spring.datasource.url=jdbc:mysql://localhost:3306/doctolib?serverTimezone=UTC
 
 spring.datasource.username=root
 spring.datasource.password=Login123!
