--- a/DoctoLib/pom.xml
+++ b/DoctoLib/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.formation</groupId>
     <artifactId>app</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0-RELEASE</version>
     <name>app</name>
     <description>DoctoLib project</description>
 
